fix align right editable number

--- a/public/common/css/style.css
+++ b/public/common/css/style.css
@@ -294,7 +294,9 @@ table.dataTable {
 .cellnumber {
 	text-align: right;
 }
-
+.editable-container{
+	/* float: right; */
+}
 /* .editable-container.editable-inline {
     width: 100%;
 }
